Fix readability of weekend-selected dates on calendar (#172)

--- a/apps/site/assets/css/_schedule.scss
+++ b/apps/site/assets/css/_schedule.scss
@@ -397,7 +397,7 @@ a {
 
 .schedule-selected,
 .schedule-today {
-  @extend %button-selected-color;
+  @include button-selected-color;
 }
 
 .schedule-next-month {
